python-dev is required to build OpenSRF python packages

--- a/Open-ILS/src/extras/Makefile.install
+++ b/Open-ILS/src/extras/Makefile.install
@@ -98,6 +98,7 @@ DEBS =  \
 	libtext-csv-perl\
 	libspreadsheet-writeexcel-perl\
 	libtie-ixhash-perl\
+	python-dev\
 	python-setuptools\
 	libfreezethaw-perl
 
