XML::LibXML::XPathContext is a prerequisite for Application::Fielder and Application::PermaCrud

--- a/Open-ILS/src/extras/Makefile.install
+++ b/Open-ILS/src/extras/Makefile.install
@@ -188,7 +188,8 @@ CPAN_MODULES = \
     JSON::XS\
     SRU \
     Net::Z3950::ZOOM \
-	Business::CreditCard::Object
+	Business::CreditCard::Object \
+	XML::LibXML::XPathContext
 
 
 # ----------------------------------------------------------------------------
