ue.xhtml goes nuts with &quot; if we escape the calendar script

--- a/Open-ILS/examples/apache/eg_vhost.conf
+++ b/Open-ILS/examples/apache/eg_vhost.conf
@@ -103,6 +103,7 @@ OSRFGatewayConfig /openils/conf/opensrf_core.xml
 # ----------------------------------------------------------------------------------
 <LocationMatch /xul/.*\.xhtml$>
     Options +Includes
+    XMLEntEscapeScript "no"
     AddOutputFilter INCLUDES;XMLENT .xhtml
     allow from all
 
